[gd_scene load_steps=3 format=3 uid="uid://byfc2v06ox1qp"]

[ext_resource type="Script" path="res://Source/Scenes/Choice/ChoiceElement.gd" id="1_76cf7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_37evw"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="ChoiceElement" type="Panel"]
clip_contents = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_37evw")
script = ExtResource("1_76cf7")

[node name="CharacterPortrait" type="TextureRect" parent="."]
unique_name_in_owner = true
show_behind_parent = true
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -344.0
offset_right = 344.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 2
stretch_mode = 5

[node name="CharacterButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 50)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.0
offset_top = -4.0
offset_right = 4.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2
text = "Character"

[connection signal="pressed" from="CharacterButton" to="." method="_on_character_button_pressed"]
